after finished: https://docs.microsoft.com/en-us/aspnet/core/data/ef-rp/intro?view=aspnetcore-5.0&tabs=visual-studio#database-connection-string

--- a/ContosoUniversity_RazorPages/appsettings.json
+++ b/ContosoUniversity_RazorPages/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SchoolContext": "Server=(localdb)\\mssqllocaldb;Database=SchoolContext-2b06c9d8-cd67-44db-bec7-6f12a4b09710;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SchoolContext": "Server=(localdb)\\mssqllocaldb;Database=CU-1;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
